--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,5 @@ testem.log
 .DS_Store
 Thumbs.db
 
-**/src/environments/environment.prod.ts
-**/src/environments/environment.ts
+/src/environments/**
 package-lock.json
